# canopy

./: .gitignore  LICENSE  README.md  build.bat
.github/workflows/: build.yml
App/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SizeMonitor.App.csproj
App/Controls/: SizeNodeView.cs  SizeTreeView.xaml  SizeTreeView.xaml.cs  Treemap.cs
App/Helpers/: Logger.cs  SizeFormatter.cs
Core/: CMakeLists.txt
Core/asm/: simd_sum.asm  simd_sum.cpp  simd_sum.h
Core/include/: smon_api.h
Core/src/: api.cpp  dir_scanner.cpp  dir_scanner.h  mft_scanner.cpp  mft_scanner.h  node_pool.cpp  node_pool.h  scan_context.h  scanner_router.cpp  scanner_router.h  size_rollup.cpp  size_rollup.h
Interop/: Native.cs  ScanSession.cs
installer/: canopy.iss
